Rozne poprawki w sseint.h; Dodano szczegolowe testy operacji z sseint.h

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,17 +1,47 @@
 CC=/usr/local/gcc-4.3-20080215/bin/g++
 #CC=g++
-FLAGS=-O3 -mssse3 -I ../
+FLAGS=-O3 -ffast-math -I ../ 
 
-all: test_float
+all: test_int test_float
+	
+test_float: test_float10 test_float20 test_float30 test_float31
 
-tests: tests.cpp test_ivec.cpp
-	$(CC) $(FLAGS) tests.cpp -o tests -lboost_unit_test_framework-gcc42-mt-1_34_1
+test_int: test_int20 test_int30 test_int31
 
-test_float: test_float.cpp
-	$(CC) $(FLAGS) test_float.cpp -o test_float
+#tests: tests.cpp test_ivec.cpp
+#	$(CC) $(FLAGS) tests.cpp -o tests -lboost_unit_test_framework-gcc42-mt-1_34_1
+
+
+test_float31: test_float.cpp
+	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float31
+
+test_float30: test_float.cpp
+	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float30
+
+test_float20: test_float.cpp
+	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float20
+
+test_float10: test_float.cpp
+	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float10
+
+
+test_int31: test_int.cpp
+	$(CC) $(FLAGS) -mssse3 test_int.cpp -o test_int31
+
+test_int30: test_int.cpp
+	$(CC) $(FLAGS) -msse3 test_int.cpp -o test_int30
+
+test_int20: test_int.cpp
+	$(CC) $(FLAGS) -msse2 test_int.cpp -o test_int20
 
 temp: temp.cpp
 	$(CC) $(FLAGS) temp.cpp -o temp
 
+
 clean:
-	rm *.gch *.o temp tests
+	-rm *.gch *.o temp tests \
+		test_float10 test_float20 test_float30 test_float31 \
+		test_int20 test_int30 test_int31 
+
+.PHONY: clean test_int test_float all
+
