Commit przed ostra zmiana (wywalenie .X() .Y() etc)

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -12,29 +12,29 @@ test_int: test_int20 test_int30 test_int31
 #	$(CC) $(FLAGS) tests.cpp -o tests -lboost_unit_test_framework-gcc42-mt-1_34_1
 
 
-test_float31: test_float.cpp
+test_float31: test_float.cpp ../*.h
 	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float31
 
-test_float30: test_float.cpp
+test_float30: test_float.cpp ../*.h
 	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float30
 
-test_float20: test_float.cpp
+test_float20: test_float.cpp ../*.h
 	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float20
 
-test_float10: test_float.cpp
+test_float10: test_float.cpp ../*.h
 	$(CC) $(FLAGS) -mssse3 test_float.cpp -o test_float10
 
 
-test_int31: test_int.cpp
+test_int31: test_int.cpp ../*.h
 	$(CC) $(FLAGS) -mssse3 test_int.cpp -o test_int31
 
-test_int30: test_int.cpp
+test_int30: test_int.cpp ../*.h
 	$(CC) $(FLAGS) -msse3 test_int.cpp -o test_int30
 
-test_int20: test_int.cpp
+test_int20: test_int.cpp ../*.h
 	$(CC) $(FLAGS) -msse2 test_int.cpp -o test_int20
 
-temp: temp.cpp
+temp: temp.cpp ../*.h
 	$(CC) $(FLAGS) temp.cpp -o temp
 
 
